--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
   <link rel="stylesheet" href="/assets/css/style.css">
 
-  <title>Escape I3C - Uff</title>
+  <title>Escape-I3C</title>
 </head>
 
 <body data-spy="scroll" data-target="#navbarid" data-offset="250">
@@ -51,52 +51,43 @@
     <div class="container h-100">
       <div class="d-flex h-100 text-center align-items-center">
         <div class="w-100 text-white">
-          <h1 class="display-3">Escape - Game Name</h1>
-          <p class="lead mb-0 mt-4"><button type="button" class="btn btn-lg btn-outline-light"><a class="playbut" href="/pages/chooseteam.html">Play Now</a></button></p>
+          <h1 class="display-3">Escape - I3C</h1>
+          <p class="lead mb-0 mt-4"><button type="button" class="btn btn-lg btn-outline-light"><a class="playbut"
+                href="/pages/chooseteam.html">Play Now</a></button></p>
 
         </div>
       </div>
     </div>
   </header>
 
-  <div class="d-flex text-center align-items-center padding" style="height: 200px;">
+  <!-- <div class="d-flex text-center align-items-center padding" style="height: 200px;"> -->
+  <div class="d-flex text-center align-items-center padding p-5">
     <div class="w-100 text-white">
       <h1 class="font-weight-light">↓ Mehr Infos ↓</h1>
     </div>
   </div>
 
 
-  <div id="about" class="d-flex h-100 flex-column justify-content-center align-items-center">
-    <div class="align-items-center font-weight-light text-center my-auto w-50" style="color:gainsboro">
+  <!-- <div id="about" class="d-flex h-100 flex-column justify-content-center align-items-center"> -->
+  <div id="about" class="d-flex flex-column justify-content-center align-items-center p-5">
+    <div class="align-items-center font-weight-light text-center my-auto w-md-50" style="color:gainsboro">
       <h1 class="mb-3">ABOUT</h1>
-      <p>Escape The Virus ist ein Textbasiertes Escape-Game. Entstanden während des Projektseminars "I3C" der
-        Universität
-        Regensburg</p>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione ex repellendus doloribus dolores explicabo,
-        illum facilis, pariatur velit fugit vel itaque eaque, veritatis illo enim laudantium. Esse repellat provident
-        atque!
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Id culpa officiis ut at odit. Vero voluptate facilis
-        fugiat praesentium ducimus cumque incidunt quo distinctio. Sint sit eligendi voluptates iure commodi!
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum vitae provident dolore animi expedita non ipsa
-        cupiditate recusandae nulla saepe, perferendis exercitationem totam accusamus quisquam? Quam aut voluptas
-        sapiente
-        labore.
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga laudantium quo, rerum, ea consectetur explicabo
-        facere obcaecati perferendis qui placeat iste architecto error incidunt consequatur ex? Expedita nisi nobis
-        veritatis!
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa, veniam culpa, ullam cupiditate illo cumque, enim
-        pariatur modi quaerat impedit fugit temporibus excepturi eligendi at nemo quam. Reiciendis, mollitia minus?
+      <p>Escape-I3C ist ein Textbasiertes Escape-Game. Als Projekt im Seminar "Interaktionsdesign, Informationsverhalten und
+        Informationsvisualisierung in Zeiten der Corona-Krise" soll dieses Spiel einen Versuch starten, die erfolgreichen Escape-Room-Games zu
+        digitalisieren. Wir (Sebastien, Sabrina, Daniela und Marcus) haben dieses Spiel auf Basis eines gestellten und beantworteten Fragebogens 
+        konzipiert. 
+      </p>
+      <p>
+
       </p>
     </div>
 
   </div>
 
-  <div id="story" class="d-flex h-100 flex-column justify-content-center align-items-center">
-    <div class="align-items-center font-weight-light text-center my-auto w-50" style="color:gainsboro">
+  <div id="story" class="d-flex flex-column justify-content-center align-items-center p-5">
+    <div class="align-items-center font-weight-light text-center my-auto w-md-50" style="color:gainsboro">
       <h1 class="mb-3">STORY</h1>
-      <p>Escape The Virus ist ein Textbasiertes Escape-Game. Entstanden während des Projektseminars "I3C" der
-        Universität
-        Regensburg</p>
+      <p>Tauche ein als Undercover-Agent</p>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione ex repellendus doloribus dolores explicabo,
         illum facilis, pariatur velit fugit vel itaque eaque, veritatis illo enim laudantium. Esse repellat provident
         atque!
@@ -122,7 +113,8 @@
     <img
       src="https://images.pexels.com/photos/1366942/pexels-photo-1366942.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
       alt="Lab" style="width: 100%; max-height: 100vh; filter: brightness(70%); opacity: 50%">
-    <button class="centertxt btn btn-lg btn-outline-light"><a class="playbut" href="/pages/chooseteam.html">PLAY NOW</a></button>
+    <button class="centertxt btn btn-lg btn-outline-light"><a class="playbut" href="/pages/chooseteam.html">PLAY
+        NOW</a></button>
   </div>
 
 
@@ -138,32 +130,32 @@
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
 
-<!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-app.js"></script>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-app.js"></script>
 
-<!-- TODO: Add SDKs for Firebase products that you want to use
+  <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
-<script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-analytics.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-analytics.js"></script>
 
-<script src="/__/firebase/6.1.1/firebase-firestore.js"></script>
+  <script src="/__/firebase/6.1.1/firebase-firestore.js"></script>
 
-<script>
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  var firebaseConfig = {
-    apiKey: "AIzaSyCoQDrNojQu2Rql-0OmTy9f6tqs06VwqdM",
-    authDomain: "escapei3c.firebaseapp.com",
-    databaseURL: "https://escapei3c.firebaseio.com",
-    projectId: "escapei3c",
-    storageBucket: "escapei3c.appspot.com",
-    messagingSenderId: "925037180566",
-    appId: "1:925037180566:web:ff38b6ed8d50f0d17df4b7",
-    measurementId: "G-BJYRQYVS1Y"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-  firebase.analytics();
-</script>
+  <script>
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    var firebaseConfig = {
+      apiKey: "AIzaSyCoQDrNojQu2Rql-0OmTy9f6tqs06VwqdM",
+      authDomain: "escapei3c.firebaseapp.com",
+      databaseURL: "https://escapei3c.firebaseio.com",
+      projectId: "escapei3c",
+      storageBucket: "escapei3c.appspot.com",
+      messagingSenderId: "925037180566",
+      appId: "1:925037180566:web:ff38b6ed8d50f0d17df4b7",
+      measurementId: "G-BJYRQYVS1Y"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+  </script>
 </body>
 
 </html>
