--- a/public/pages/teamone/labor.html
+++ b/public/pages/teamone/labor.html
@@ -15,19 +15,27 @@
 
 
   <div class="test">Labor</div>
+  <div class="container-fluid buttons">
+    <div class="btn-one">
+      <button id="btn-one" type="button" class="btn btn-primary" data-toggle="modal"
+        data-target="#exampleModal">Bildschirm</button>
+    </div>
+    <div class="btn-two">
+      <button id="btn-two" type="button" class="btn btn-primary" data-toggle="modal"
+        data-target="#exampleModal2">Tür</button>
+    </div>
 
-  <button id="btn-one" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Open
-    modal 1</button>
-  <button id="btn-two" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal2">Open
-    modal 1</button>
-  <button id="btn-three" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModa3">Open
-    modal 3</button>
+
+  </div>
+
+  <!-- <button id="btn-three" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModa3">Open
+    modal 3</button> -->
 
 
 
   <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
-    <div class="modal-dialog" role="document"> 
+    <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-header">
           <h4 class="modal-title" id="exampleModalLabel">Bildschirm</h4>
@@ -36,7 +44,94 @@
           </button>
         </div>
         <div class="modal-body">
-          AUG GAA GAG ACU AUG GAG GCU ACA UCC GAA GUA GAG AAC CCC AUG
+          <div id="mainBefore">
+            AUG GAA GAG ACU AUG GAG GCU ACA UCC GAA GUA GAG AAC CCC AUG
+            <div class="form-group">
+              <label class="col-form-label">Code:</label>
+              <div id="alertMainWrong" class="d-none" style="color:red; display: inline;"><strong>FALSCHER
+                  CODE!</strong>
+                Zugang verwehrt.</div>
+              <input type="text" class="form-control" id="codeMainInput">
+            </div>
+          </div>
+          <div id="mainAfter" class="d-none">
+            <p>Moin</p>
+          </div>
+        </div>
+
+        <div id="mainModalFooter" class="modal-footer">
+          <button id="codeMainEingabe" type="button" class="btn btn-primary">Eingabe</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade " id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+      <!---->
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title" id="exampleModalLabel">Nebenraum Tür</h4>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+
+          <div id="picCake">
+            <img
+              src="https://images.pexels.com/photos/1070850/pexels-photo-1070850.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+              style="width:100%; height: auto; max-width: 100%;">
+              <div class="dropdown">
+                <button class="btn btn-outline.dark dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Hinweis gefällig?
+                </button>
+                <div class="dropdown-menu p-4 text-muted" style="max-width: 200px;">
+                  <p>
+                    4-stellig mit einem Hauch von Mathe.
+                  </p>
+                </div>
+              </div>
+          </div>
+          <div id="alertCorrect" class="alert alert-success alert-dismissible fade" role="alert">
+            <strong>KORREKTER CODE!</strong> Zugang gewährt.
+          </div>
+
+          <div id="formRoom" class="form-group">
+            <label for="recipient-name" class="col-form-label">Code:</label>
+            <div id="alertWrong" class="d-none" style="color:red; display: inline;"><strong>FALSCHER CODE!</strong>
+              Zugang verwehrt.</div>
+            <input type="password" class="form-control" id="codeRoomInput">
+          </div>
+
+        </div>
+        <div id="code-suc" class="d-none">
+          <img
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/70/Aminoacids_table.svg/1024px-Aminoacids_table.svg.png"
+            style="width: 100%; height: auto; max-width: 100%;">
+        </div>
+        <div id="footerModalRoom" class="modal-footer">
+          <button id="raumCodeEingabe" type="button" class="btn btn-primary">Eingabe</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- <div class="modal fade" id="exampleModa3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title" id="exampleModalLabel">New message</h4>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <img
+            src="https://images.pexels.com/photos/5403574/pexels-photo-5403574.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+            style="height: 150px;">
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -44,104 +139,84 @@
         </div>
       </div>
     </div>
-  </div>
-
-  <div class="modal fade " id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-  aria-hidden="true">
-  <div class="modal-dialog modal-lg" role="document"> <!---->
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title" id="exampleModalLabel">Nebenraum Tür</h4>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <div class="alert alert-danger fade show" role="alert">
-          <strong>FALSCHER CODE!</strong> Zugang verwehrt.
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="alert alert-success alert-dismissible fade show" role="alert">
-          <strong>KORREKTER CODE!</strong> Zugang gewährt.
-        </div>
-        <form id="code-form">
-          <div class="form-group">
-            <label for="recipient-name" class="col-form-label">Code:</label>
-            <input type="password" class="form-control" id="code">
-          </div>
-          </form>
-      </div>
-      <div id="code-suc">
-       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/70/Aminoacids_table.svg/1024px-Aminoacids_table.svg.png" style="width: 100%; height: auto; max-width: 100%;"> 
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Schließen</button>
-        <button type="button" class="btn btn-primary">Eingabe</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="modal fade" id="exampleModa3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-aria-hidden="true">
-<div class="modal-dialog" role="document"> <!---->
-  <div class="modal-content">
-    <div class="modal-header">
-      <h4 class="modal-title" id="exampleModalLabel">New message</h4>
-      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <div class="modal-body">
-      <img src="https://images.pexels.com/photos/5403574/pexels-photo-5403574.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" style="height: 150px;">
-    </div>
-    <div class="modal-footer">
-      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-      <button type="button" class="btn btn-primary">Send message</button>
-    </div>
-  </div>
-</div>
-</div>
+  </div> -->
 
 
-  
+
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+    crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
     integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
     crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-firestore.js"></script>
 
-<script>
-  const firebase = require("firebase");;
-  require("firebase/firestore");
-  
-  firebase.initializeApp({
-    apiKey: "AIzaSyCoQDrNojQu2Rql-0OmTy9f6tqs06VwqdM",
-    authDomain: "escapei3c.firebaseapp.com",
-    projectId: "escapei3c"
-  });
+  <script src="/pages/teamone/labor.js" type="module"></script>
 
-  var db = firebase.firestore();
+  <script>
+    document.getElementById("raumCodeEingabe").onclick = checkCodeRoom;
+    document.getElementById("codeRoomInput").addEventListener("keypress", function (e) {
+      if (e.key === "Enter") {
+        checkCodeRoom();
+        if (isCorrectRoom()) {
+          document.querySelector("#formRoom").classList.add("d-none");
+        }
+      }
+    });
 
-  var docRef = db.collection("codes").doc("lab-one");
+    function checkCodeRoom() {
+      console.log("Yep");
+      if (isCorrectRoom()) {
+        console.log("correct");
+        document.getElementById("alertCorrect").classList.add("show");
+        document.getElementById("code-suc").classList.remove("d-none");
+        document.getElementById("footerModalRoom").classList.add("d-none");
+        document.getElementById("picCake").classList.add("d-none");
+      } else {
+        document.getElementById("alertWrong").classList.remove("d-none");
 
-  docRef.get().then(function(doc) {
-    if(doc.exists) {
-      console.log("Data-Test: ", doc.data());
-    } else {
-      console.log("Nopes");
+      }
     }
-  }).catch(function(error) {
-    console.log("Error: ", error);
-  })
+
+    function isCorrectRoom() {
+      if (document.getElementById("codeRoomInput").value === "3141") {
+        return true;
+      } else {
+        return false;
+      }
+    }
+
+    document.getElementById("codeMainEingabe").onClick = checkMain;
+    document.getElementById("codeMainInput").addEventListener("keypress", function (e) {
+      if (e.key === "Enter") {
+        checkMain();
+        if (isCorrectMain()) {
+          document.getElementById("mainBefore").classList.add("d-none");
+          document.getElementById("mainAfter").classList.remove("d-none");
+          document.getElementById("mainModalFooter").classList.add("d-none");
+        }
+      }
+    });
+
+    function isCorrectMain() {
+      return document.getElementById("codeMainInput").value.toLowerCase().includes("meet me at seven pm") ||
+        document.getElementById("codeMainInput").value.toLowerCase().includes("meetmeatsevenpm");
+    }
+
+    function checkMain() {
+      if (isCorrectMain()) {
+        console.log("correct");
+      } else {
+        console.log("nopes");
+      }
+    }
+
+
   </script>
 
 </body>
