team 1 one, attila in the making

--- a/public/pages/teamone/labor.html
+++ b/public/pages/teamone/labor.html
@@ -55,7 +55,7 @@
             </div>
           </div>
           <div id="mainAfter" class="d-none">
-            <p>Moin</p>
+            <a href="gates.html">Weiter gehts</a>
           </div>
         </div>
 
@@ -102,7 +102,7 @@
             <label for="recipient-name" class="col-form-label">Code:</label>
             <div id="alertWrong" class="d-none" style="color:red; display: inline;"><strong>FALSCHER CODE!</strong>
               Zugang verwehrt.</div>
-            <input type="password" class="form-control" id="codeRoomInput">
+            <input type="number" class="form-control" id="codeRoomInput" maxlength="4" required>
           </div>
 
         </div>
