attila in progress

--- a/public/pages/chooseteam.html
+++ b/public/pages/chooseteam.html
@@ -39,7 +39,7 @@
                Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aut voluptas numquam recusandae quia voluptatibus, tempora quod rem eum et repellat sequi quis doloremque eaque fugiat est porro cum reprehenderit.
                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur nulla eligendi rerum iste eum cum assumenda nemo nihil. Assumenda non culpa cupiditate labore odio ducimus commodi accusamus maiores deleniti eligendi.
           <div>
-              <button class="butt btn btn-light"><a class="playbut" href="/pages/teamtwo/attilla.html">Spiele als Team 2</a></button>
+              <button class="butt btn btn-light"><a class="playbut" href="/pages/teamtwo/labor.html">Spiele als Team 2</a></button>
           </div> 
         </div>
            
