--- a/public/pages/teamone/labor.html
+++ b/public/pages/teamone/labor.html
@@ -12,9 +12,6 @@
 </head>
 
 <body>
-
-
-  <div class="test">Labor</div>
   <div class="container-fluid buttons">
     <div class="btn-one">
       <button id="btn-one" type="button" class="btn btn-primary" data-toggle="modal"
@@ -24,7 +21,14 @@
       <button id="btn-two" type="button" class="btn btn-primary" data-toggle="modal"
         data-target="#exampleModal2">Tür</button>
     </div>
+    <div class="btn-three">
+      <button id="btn-three" type="button" class="btn btn-primary" data-toggle="modal"
+        data-target="#typ">Typ</button>
+    </div>
 
+    <div class="background">
+
+    </div>
 
   </div>
 
@@ -118,28 +122,29 @@
     </div>
   </div>
 
-  <!-- <div class="modal fade" id="exampleModa3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  <div class="modal fade" id="typ" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h4 class="modal-title" id="exampleModalLabel">New message</h4>
+          <h4 class="modal-title" id="exampleModalLabel">Undercover Mission</h4>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body">
-          <img
-            src="https://images.pexels.com/photos/5403574/pexels-photo-5403574.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-            style="height: 150px;">
+          <p>
+            Du musst die Hinweise in der DNA entschlüsseln, um Zugang zum geheimen Treffen zu erlangen!
+            Hilfe bekommst du angeblich im Nebenraum, den Code dafür musst du
+            Beeil dich! 
+          </p>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Send message</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Alles Klar!</button>
         </div>
       </div>
     </div>
-  </div> -->
+  </div>
 
 
 
