--- a/public/pages/chooseteam.html
+++ b/public/pages/chooseteam.html
@@ -21,11 +21,9 @@
             <div class="headline display-3">Wähle dein Team</div>
         <div class="imgc col-lg-6 col-sm-12 p-0 h-100" >
             <div class="description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus cupiditate, fuga reprehenderit doloribus minus sint nam fugit aut optio sapiente at veniam sunt perferendis. Blanditiis incidunt dolores laudantium? Reprehenderit, architecto?
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt cum corporis harum sint, iusto quisquam quasi mollitia explicabo numquam, cupiditate quo aut. Deserunt mollitia cum consectetur, harum nulla inventore aliquid.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aut voluptas numquam recusandae quia voluptatibus, tempora quod rem eum et repellat sequi quis doloremque eaque fugiat est porro cum reprehenderit.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur nulla eligendi rerum iste eum cum assumenda nemo nihil. Assumenda non culpa cupiditate labore odio ducimus commodi accusamus maiores deleniti eligendi.
-            <div>
+                Starte in einem geheimen Labor und entschlüssel DNA-Stränge, um ein Treffen mit einer wichtigen Person der digitalen Weltgeschichte zu arrangieren.
+                Erfahre, was hinter dem Chip-Tracking steckt. Versuche Fledermäuse zu verstehen und einen wichtigen Beitrag zum Erhalten des Serums zu leisten.
+                <div>
                 <button class="butt btn btn-light"><a class="playbut" href="/pages/teamone/labor.html">Spiele als Team 1</a></button>
             </div>
         </div>
@@ -34,11 +32,9 @@
         </div>
        <div id="two" class="imgc col-lg-6 col-sm-12 p-0 h-100">
            <div class="description">
-               Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus cupiditate, fuga reprehenderit doloribus minus sint nam fugit aut optio sapiente at veniam sunt perferendis. Blanditiis incidunt dolores laudantium? Reprehenderit, architecto?
-               Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt cum corporis harum sint, iusto quisquam quasi mollitia explicabo numquam, cupiditate quo aut. Deserunt mollitia cum consectetur, harum nulla inventore aliquid.
-               Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aut voluptas numquam recusandae quia voluptatibus, tempora quod rem eum et repellat sequi quis doloremque eaque fugiat est porro cum reprehenderit.
-               Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur nulla eligendi rerum iste eum cum assumenda nemo nihil. Assumenda non culpa cupiditate labore odio ducimus commodi accusamus maiores deleniti eligendi.
-          <div>
+               Starte im Labor der Dienststelle und entschlüssel Hinweise von Kontaktpersonen. Treffe dich im geheimen Keller, um den wichtigen Schlüssel zu Erhalten
+               und leiste damit deinen Beitrag, um Leben zu retten.
+            <div>
               <button class="butt btn btn-light"><a class="playbut" href="/pages/teamtwo/labor.html">Spiele als Team 2</a></button>
           </div> 
         </div>
