--- a/public/pages/teamtwo/attila.html
+++ b/public/pages/teamtwo/attila.html
@@ -222,7 +222,7 @@
                         <div class="lead">
                             Schnell! Ein Notfall im Krankenhaus!
                         </div>
-                        <a href="#">Zum nächsten Level!</a>
+                        <a href="/pages/finale.html">Zum nächsten Level!</a>
                     </div>
                     <div id="footerModalStatue" class="modal-footer">
                         <button id="doneBtn" type="button" class="btn btn-primary d-none">Aufgenommen und abgepaust!</button>
