--- a/public/pages/teamone/gates.html
+++ b/public/pages/teamone/gates.html
@@ -119,7 +119,7 @@
                     </div>
 
                     <div id="batAfter" class="d-none">
-                        <a href="#">Ein Notfall im Krankenhaus! Beeilt euch!</a>
+                        <a href="/pages/finale.html">Ein Notfall im Krankenhaus! Beeilt euch!</a>
                     </div>
 
                 </div>
