--- a/public/pages/teamone/gates.html
+++ b/public/pages/teamone/gates.html
@@ -8,7 +8,7 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <link rel="stylesheet" href="/assets/css/gatesone.css">
-    <title>I3C - Gates Team 1</title>
+    <title>I3C - Team 1</title>
 </head>
 
 <body>
@@ -81,7 +81,7 @@
                     </div>
 
                     <div id="code-suc" class="d-none">
-                        <img src="https://images.pexels.com/photos/3261020/pexels-photo-3261020.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                        <img src="/assets/img/GATES_NEBENRAUM.jpg"
                             style="width: 100%; height: auto; max-width: 100%;">
                         <div class="dropdown">
                             <button class="btn btn-outline.dark dropdown-toggle" type="button" id="dropdownMenuButton"
