--- a/public/pages/teamtwo/attila.html
+++ b/public/pages/teamtwo/attila.html
@@ -8,7 +8,7 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <link rel="stylesheet" href="/assets/css/attilatwo.css">
-    <title>I3C - Attila Team 1</title>
+    <title>I3C - Team 2</title>
 </head>
 
 <body>
@@ -59,7 +59,7 @@
 
 
                     <div class="notes">
-                        <img src="https://images.pexels.com/photos/6183/office-notes-colorful-paper.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                        <img src="/assets/img/HILDMANN_LOCK.jpg"
                             alt="Notizen" style="width:100%; max-width: 100%; height: auto;">
                         <div class="dropdown">
                             <button class="btn btn-outline.dark dropdown-toggle" type="button" id="dropdownMenuButton"
@@ -251,7 +251,7 @@
     <!-- <script src="/pages/teamone/gates.js" type="module"></script> -->
 
     <script>
-        setBg('/assets/img/attilla.jpeg');
+        setBg('/assets/img/HILDMANN.jpeg');
         var firstTry = 0, secondTry = 0; thirdTry = 0;
 
         document.getElementById("generatorBtn").addEventListener("click", function () {
