--- a/public/pages/teamtwo/labor.html
+++ b/public/pages/teamtwo/labor.html
@@ -8,7 +8,7 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <link rel="stylesheet" href="/assets/css/labortwo.css">
-    <title>I3C - Labor Team 2</title>
+    <title>I3C - Team 2</title>
 </head>
 
 <body>
@@ -50,12 +50,12 @@
                 <div class="modal-body">
 
                     <div class="lead">
-                        Uns wurde gesagt, dass eine Kontaktperson Hinweise hinterlassen hat.
+                        Uns wurde gesagt, dass eine Kontaktperson Hinweise hinterlassen hat. Die Hinweise siehst du am Tisch.
                     </div>
-                    <div class="petri">
+                    <!-- <div class="petri">
                         <img src="https://images.pexels.com/photos/4031435/pexels-photo-4031435.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
                             alt="Petri" style="width:100%; max-width: 100%; height:auto;">
-                    </div>
+                    </div> -->
 
 
                     <div class="dropdown">
@@ -98,7 +98,7 @@
                         Dieser Hinweis ist verschlüsselt... Vielleicht hängt es mit den Petrischalen zusammen.
                     </div>
                     <div id="picCake">
-                        <img src="/assets/img/bilderraetsel.png" style="width:100%; height: auto; max-width: 100%;">
+                        <img src="/assets/img/LABOR02_NEBENRAUM.jpg" style="width:100%; height: auto; max-width: 100%;">
                         <div class="dropdown">
                             <button class="btn btn-outline.dark dropdown-toggle" type="button" id="dropdownMenuButton"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
