--- a/public/pages/teamone/labor.html
+++ b/public/pages/teamone/labor.html
@@ -6,9 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 
   <link rel="stylesheet" href="/assets/css/laborone.css">
-  <title>I3C - Labor Team 1</title>
+  <title>I3C - Team 1</title>
 </head>
 
 <body>
@@ -21,9 +23,20 @@
       <button id="btn-two" type="button" class="btn btn-primary" data-toggle="modal"
         data-target="#exampleModal2">Tür</button>
     </div>
-    <div class="btn-three">
-      <button id="btn-three" type="button" class="btn btn-primary" data-toggle="modal"
-        data-target="#typ">Typ</button>
+    <div class="btn-two">
+      <button id="btn-chart" type="button" class="btn btn-primary" data-toggle="modal"
+        data-target="#exampleModal2">Graph</button>
+    </div>
+    <div class="btn-two">
+      <button id="btn-mikro" type="button" class="btn btn-primary" data-toggle="modal"
+        data-target="#mikro">Mikro</button>
+    </div>
+    <div class="btn-two">
+      <button id="btn-deko" type="button" class="btn btn-primary" data-toggle="modal" data-target="#deko">Deko</button>
+    </div>
+    <div class="btn-three text-center">
+      <button id="btn-three" type="button" class="btn btn-primary" data-toggle="modal" data-target="#typ"
+        style='font-size: 48px'><i class="fa fa-info-circle"></i></button>
     </div>
 
     <div class="background">
@@ -49,7 +62,7 @@
         </div>
         <div class="modal-body">
           <div id="mainBefore">
-            AUG GAA GAG ACU AUG GAG GCU ACA UCC GAA GUA GAG AAC CCC AUG
+            <img src="/assets/img/LAB_01_BILDSCHIRM.jpg" style="width:100%; height: auto; max-width: 100%;">
             <div class="form-group">
               <label class="col-form-label">Code:</label>
               <div id="alertMainWrong" class="d-none" style="color:red; display: inline;"><strong>FALSCHER
@@ -84,19 +97,32 @@
         <div class="modal-body">
 
           <div id="picCake">
-            <img
-              src="https://images.pexels.com/photos/1070850/pexels-photo-1070850.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-              style="width:100%; height: auto; max-width: 100%;">
-              <div class="dropdown">
-                <button class="btn btn-outline.dark dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Hinweis gefällig?
-                </button>
-                <div class="dropdown-menu p-4 text-muted" style="max-width: 200px;">
-                  <p>
-                    4-stellig mit einem Hauch von Mathe.
-                  </p>
-                </div>
+            <img src="/assets/img/LAB01_Nenbenraum_Tur.jpg" style="width:100%; height: auto; max-width: 100%;">
+            <div class="dropdown">
+              <button class="btn btn-outline.dark dropdown-toggle" type="button" id="dropdownMenuButton"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Hinweis gefällig?
+              </button>
+              <div class="dropdown-menu p-4 text-muted" style="max-width: 200px;">
+                <p>
+                  4-stellig mit einem Hauch von Mathe.
+                </p>
               </div>
+            </div>
+            <div id="hinweis-pie" class="dropdown d-none">
+              <button class="btn btn-outline.dark dropdown-toggle" type="button" id="dropdownMenuButton"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Hinweis zum Code:
+              </button>
+              <div class="dropdown-menu p-4 text-muted" style="max-width: 200px;">
+                <p>
+                  It's not a cake, it's a [...].
+                <p>
+                  Phonetische Ähnlichkeit zu etwas in der Mathematik.
+                </p>
+                </p>
+              </div>
+            </div>
           </div>
           <div id="alertCorrect" class="alert alert-success alert-dismissible fade" role="alert">
             <strong>KORREKTER CODE!</strong> Zugang gewährt.
@@ -108,26 +134,38 @@
               Zugang verwehrt.</div>
             <input type="number" class="form-control" id="codeRoomInput" maxlength="4" required>
           </div>
+          <div id="code-suc" class="d-none">
+            <img id="main-pic" src="/assets/img/LAB01_NEBENRAUM.jpg"
+              style="width: 100%; height: auto; max-width: 100%;">
+            <img id="zettel-pic" class="d-none" src="/assets/img/LAB01_NEBENRAUM-ZETTEL.jpg"
+              style="width: 100%; height: auto; max-width: 100%;">
+            <img id="graph-pic" class="d-none" src="/assets/img/LAB01_NEBENRAUM_GRAPH.jpg"
+              style="width: 100%; height: auto; max-width: 100%;">
+            <img id="scheibe-pic" class="d-none" src="/assets/img/LAB01_NEBENRAUM-SCHEIBE.jpg"
+              style="width: 100%; height: auto; max-width: 100%;">
+          </div>
+        </div>
 
-        </div>
-        <div id="code-suc" class="d-none">
-          <img
-            src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/70/Aminoacids_table.svg/1024px-Aminoacids_table.svg.png"
-            style="width: 100%; height: auto; max-width: 100%;">
-        </div>
         <div id="footerModalRoom" class="modal-footer">
           <button id="raumCodeEingabe" type="button" class="btn btn-primary">Eingabe</button>
+          <div id="raumBtns" class="d-none">
+            <button id="raumZettel" type="button" class="btn btn-primary ">Zettel links ansehen</button>
+            <button id="raumGraph" type="button" class="btn btn-primary ">Graph ansehen</button>
+            <button id="raumScheibe" type="button" class="btn btn-primary ">Zettel rechts ansehen</button>
+          </div>
+          <button id="backZettel" type="button" class="btn btn-secondary d-none">Zurück</button>
+          <button id="backGraph" type="button" class="btn btn-secondary d-none">Zurück</button>
+          <button id="backScheibe" type="button" class="btn btn-secondary d-none">Zurück</button>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="modal fade" id="typ" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-    aria-hidden="true">
+  <div class="modal fade" id="typ" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h4 class="modal-title" id="exampleModalLabel">Undercover Mission</h4>
+          <h4 class="modal-title" id="exampleModalLabel">Im Labor</h4>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -135,8 +173,61 @@
         <div class="modal-body">
           <p>
             Du musst die Hinweise in der DNA entschlüsseln, um Zugang zum geheimen Treffen zu erlangen!
-            Hilfe bekommst du angeblich im Nebenraum, den Code dafür musst du
-            Beeil dich! 
+          </p>
+          <p>Hilfe bekommst du angeblich im Nebenraum, den Code dafür musst du herausfinden.
+            Beeil dich!
+          </p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Alles Klar!</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="mikro" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title" id="exampleModalLabel">Mikroskop</h4>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p class="lead">
+            Ein einfaches Lichtmikroskop.
+          </p>
+          <p>Mit bloßem Auge kann man Struturen mit 0.2 mm Größe erkennen, mit einem Lichtmikroskop hingegen kann man
+            500 nm kleine Strukturen auflösen.</p>
+          <p>SARS-CoV-2 ist etwa 100 Nanometer klein und im präparierten Zustand unter einem Elektronenmikroskop gut zu
+            erkennen. Mit speziellen Lichtmikroskopen
+            will man das Virus im lebendigen Zustand genauer beobachten und verstehen.
+          </p>
+          <p>Dafür reicht dieses Modell aber nicht.</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Alles Klar!</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="deko" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title" id="exampleModalLabel">Reagenzgläser</h4>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p class="lead">
+            Leere Reagenzgläser
+          </p>
+          <p>
+            Leider nichts zu entdecken.
           </p>
         </div>
         <div class="modal-footer">
@@ -164,6 +255,8 @@
   <script src="/pages/teamone/labor.js" type="module"></script>
 
   <script>
+    var cakeTry = 0;
+
     document.getElementById("raumCodeEingabe").onclick = checkCodeRoom;
     document.getElementById("codeRoomInput").addEventListener("keypress", function (e) {
       if (e.key === "Enter") {
@@ -175,36 +268,66 @@
     });
 
     function checkCodeRoom() {
-      console.log("Yep");
       if (isCorrectRoom()) {
-        console.log("correct");
         document.getElementById("alertCorrect").classList.add("show");
         document.getElementById("code-suc").classList.remove("d-none");
-        document.getElementById("footerModalRoom").classList.add("d-none");
+        document.getElementById("raumCodeEingabe").classList.add("d-none");
+        document.getElementById("raumBtns").classList.remove("d-none");
         document.getElementById("picCake").classList.add("d-none");
       } else {
+        if (cakeTry >= 2) {
+          document.getElementById("hinweis-pie").classList.remove("d-none");
+        } else {
+          cakeTry += 1;
+        }
         document.getElementById("alertWrong").classList.remove("d-none");
+        setTimeout(function () {
+          document.getElementById("alertWrong").classList.add("d-none");
+        }, 1500);
 
       }
+    }
+
+    document.getElementById("raumZettel").addEventListener("click", function () { showPic("backZettel", "zettel-pic") });
+    document.getElementById("raumGraph").addEventListener("click", function () { showPic("backGraph", "graph-pic") });;
+    document.getElementById("raumScheibe").addEventListener("click", function () { showPic("backScheibe", "scheibe-pic") });
+    document.getElementById("backZettel").addEventListener("click", function () { showBtns("backZettel", "zettel-pic") });
+    document.getElementById("backGraph").addEventListener("click", function () { showBtns("backGraph", "graph-pic") });
+    document.getElementById("backScheibe").addEventListener("click", function () { showBtns("backScheibe", "scheibe-pic") });
+
+    function showZettel() {
+      document.getElementById("main-pic").classList.add("d-none");
+      document.getElementById("zettel-pic").classList.remove("d-none");
+      document.getElementById("raumBtns").classList.add("d-none");
+      document.getElementById("backZettel").classList.remove("d-none");
+    }
+
+    function showPic(btn, pic) {
+      let btnID = btn, picID = pic;
+      document.getElementById("main-pic").classList.add("d-none");
+      document.getElementById("raumBtns").classList.add("d-none");
+      document.getElementById(picID).classList.remove("d-none");
+      document.getElementById(btnID).classList.remove("d-none");
+
+    }
+
+    function showBtns(btnID, picID) {
+      let strBtn = btnID, strPic = picID;
+      document.getElementById(strBtn).classList.add("d-none");
+      document.getElementById(picID).classList.add("d-none");
+      document.getElementById("main-pic").classList.remove("d-none");
+      document.getElementById("raumBtns").classList.remove("d-none");
     }
 
     function isCorrectRoom() {
-      if (document.getElementById("codeRoomInput").value === "3141") {
-        return true;
-      } else {
-        return false;
-      }
+      return document.getElementById("codeRoomInput").value === "3141";
     }
 
-    document.getElementById("codeMainEingabe").onClick = checkMain;
+    document.getElementById("codeMainEingabe").addEventListener("click", checkMain);
     document.getElementById("codeMainInput").addEventListener("keypress", function (e) {
       if (e.key === "Enter") {
         checkMain();
-        if (isCorrectMain()) {
-          document.getElementById("mainBefore").classList.add("d-none");
-          document.getElementById("mainAfter").classList.remove("d-none");
-          document.getElementById("mainModalFooter").classList.add("d-none");
-        }
+
       }
     });
 
@@ -214,8 +337,11 @@
     }
 
     function checkMain() {
+
       if (isCorrectMain()) {
-        console.log("correct");
+        document.getElementById("mainBefore").classList.add("d-none");
+        document.getElementById("mainAfter").classList.remove("d-none");
+        document.getElementById("mainModalFooter").classList.add("d-none");
       } else {
         console.log("nopes");
       }
